overalignment and cdx bug fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -466,7 +466,7 @@ body::before {
 /* Chewy Logo Header */
 .chewy-logo-header {
     position: absolute;
-    top: 20px;
+    top: 60px;
     left: 50%;
     transform: translateX(-50%);
     z-index: 100;
@@ -578,7 +578,7 @@ body::before {
 .slide-content {
     width: 100%;
     height: 100%;
-    padding: 90px 30px 40px;
+    padding: 130px 30px 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
